fixed line breaks in the middle landing page, so that breaks are in list items since under ordered list and accessibility is being impacted

--- a/src/components/2000_pages/100_pages/0_home/2c_homeMiddle.module.css
+++ b/src/components/2000_pages/100_pages/0_home/2c_homeMiddle.module.css
@@ -42,6 +42,7 @@
 	width: 100%;
 	padding-right: 11%;
 }
+
 .sub_title {
 	width: 27vw;
 	font-weight: 500;
@@ -81,6 +82,7 @@
 	margin-top: 4vh;
 	margin-bottom: 4vh;
 	width: 89%;
+	list-style: none;
 }
 
 @media (min-width: 2400px) {
